test/compile-fail/resolution/multiple-definition-impl/top.rhdl
struct a {}
impl a {
    fn b () {}
    const b: bool = false;
}
